[tool.poetry]
name = "xseis2"
version = "0.2.4"
description = ""
authors = ["Your Name <you@example.com>"]
build = "setup.py"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
#cython = "^0.29.25"
obspy = "^1.2.2"
setuptools = "^59.6.0"
#conan = "^1.43.0"
Cython = "^0.29.27"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
